# torpaido

./: .gitignore  GEMINI.md  Jenkinsfile  Jenkinsfile.local  RATIONALE.md  README.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml
torpaido/: ir.py
