[project]
name = "torpedo"
version = "0.1.0"
description = "High-performance compilation and optimization engine for the Modular Quartet."
authors = [{ name = "Gearlux", email = "info@gearlux.ai" }]
dependencies = [
    "confluid",
    "logflow",
    "dataflux",
    "torch",
    "numpy",
    "typing-extensions",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "flake8-junit-report>=2.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["torpedo*"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
