[project]
name = "torpaido"
version = "0.1.0"
description = "High-performance compilation and optimization engine for the Modular Quartet."
authors = [{ name = "Taidal", email = "info@gearlux.ai" }]
dependencies = [
    "confluid>=0.1.0",
    "log-flow>=0.1.0",
    "data-flux>=0.1.0",
    "torch",
    "numpy",
    "typing-extensions",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "black>=24.0.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "flake8>=6.0.0,<8.0.0",
    "flake8-junit-report>=2.1.0",
    "mypy>=1.0.0,<2.0.0",
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<7.0.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["torpaido*"]

[tool.setuptools.package-data]
torpaido = ["py.typed"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
